--- a/index.html
+++ b/index.html
@@ -457,7 +457,25 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Estadística - Ingeniería de Sistemas</p>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Estadística</h3>
+                    <p>Curso de Ingeniería de Sistemas</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Derechos de Autor</h4>
+                    <p>&copy; 2025 Estadística - Ingeniería de Sistemas - Universidad del Tolima</p>
+                    <p>Todos los derechos reservados</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Información</h4>
+                    <p>Material educativo para el curso de Estadística</p>
+                    <p>Uso exclusivo con fines académicos</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Estadística - Ingeniería de Sistemas. Todos los derechos reservados.</p>
+            </div>
         </div>
     </footer>
 
