derechs de autor

--- a/index.html
+++ b/index.html
@@ -460,21 +460,25 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Estadística</h3>
-                    <p>Curso de Ingeniería de Sistemas</p>
+                    <p>Curso de Ingeniería de Sistemas - Universidad del Tolima</p>
                 </div>
                 <div class="footer-section">
                     <h4>Derechos de Autor</h4>
-                    <p>&copy; 2025 Estadística - Ingeniería de Sistemas - Universidad del Tolima</p>
+                    <p>&copy; 2025 - Ingeniería de Sistemas - Universidad del Tolima</p>
                     <p>Todos los derechos reservados</p>
+                    <p class="authors-info">Desarrollado por estudiantes de Ingeniería de Sistemas</p>
+                    <p class="authors-info">Segundo Semestre - Universidad del Tolima</p>
                 </div>
                 <div class="footer-section">
                     <h4>Información</h4>
                     <p>Material educativo para el curso de Estadística</p>
                     <p>Uso exclusivo con fines académicos</p>
+                    <p>Proyecto académico del segundo semestre</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Estadística - Ingeniería de Sistemas. Todos los derechos reservados.</p>
+                <p>&copy; 2025 - Ingeniería de Sistemas - Universidad del Tolima. Todos los derechos reservados.</p>
+                <p class="footer-credits">Desarrollado por estudiantes de Ingeniería de Sistemas del Segundo Semestre - Universidad del Tolima</p>
             </div>
         </div>
     </footer>
