--- a/index.html
+++ b/index.html
@@ -492,6 +492,8 @@
                     <p>Todos los derechos reservados</p>
                     <p class="authors-info">Desarrollado por estudiantes de Ingeniería de Sistemas</p>
                     <p class="authors-info">Segundo Semestre - Universidad del Tolima</p>
+                    <p class="authors-info"><strong>Participantes:</strong></p>
+                    <p class="authors-info">Yurley Mendoza, Juan Hernández, Sebastián Sañudo y Edwin Sepúlveda</p>
                 </div>
                 <div class="footer-section">
                     <h4>Información</h4>
@@ -503,6 +505,7 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 - Ingeniería de Sistemas - Universidad del Tolima. Todos los derechos reservados.</p>
                 <p class="footer-credits">Desarrollado por estudiantes de Ingeniería de Sistemas del Segundo Semestre - Universidad del Tolima</p>
+                <p class="footer-credits">Participantes: Yurley Mendoza, Juan Hernández, Sebastián Sañudo y Edwin Sepúlveda</p>
             </div>
         </div>
     </footer>
