--- a/index.html
+++ b/index.html
@@ -494,6 +494,9 @@
                     <p class="authors-info">Segundo Semestre - Universidad del Tolima</p>
                     <p class="authors-info"><strong>Participantes:</strong></p>
                     <p class="authors-info">Yurley Mendoza, Juan Hernández, Sebastián Sañudo y Edwin Sepúlveda</p>
+                    <p class="authors-info" style="margin-top: 1rem; font-size: 0.9rem; color: #666;">
+                        <strong>Nota sobre contenido:</strong> Esta página utiliza videos embebidos de YouTube con fines exclusivamente educativos. Los videos son propiedad de sus respectivos creadores y se utilizan bajo las políticas de uso de YouTube para contenido educativo.
+                    </p>
                 </div>
                 <div class="footer-section">
                     <h4>Información</h4>
@@ -505,7 +508,9 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 - Ingeniería de Sistemas - Universidad del Tolima. Todos los derechos reservados.</p>
                 <p class="footer-credits">Desarrollado por estudiantes de Ingeniería de Sistemas del Segundo Semestre - Universidad del Tolima</p>
-                <p class="footer-credits">Participantes: Yurley Mendoza, Juan Hernández, Sebastián Sañudo y Edwin Sepúlveda</p>
+                <p class="footer-credits" style="font-size: 0.85rem; margin-top: 0.5rem; color: #888;">
+                    Los videos de YouTube utilizados en esta página son propiedad de sus respectivos creadores y se usan con fines educativos bajo las políticas de uso de YouTube.
+                </p>
             </div>
         </div>
     </footer>
